feat: Add standard Git workflow with GitHub Actions CI - Standard CI/CD pipeline with staging/production branches - Simple git-workflow.sh helper script for feature development - GitHub Actions for automated testing and deployment notifications - Industry-standard branching: feature → staging → main

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "ingest": "tsx scripts/ingest-docs.ts",
-    "rag-worker": "tsx scripts/rag-worker.ts"
+    "rag-worker": "tsx scripts/rag-worker.ts",
+    "workflow": "chmod +x scripts/git-workflow.sh && ./scripts/git-workflow.sh"
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^6.0.1",
