--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "ingest": "tsx scripts/ingest-docs.ts",
     "rag-worker": "tsx scripts/rag-worker.ts",
+    "check-docs": "tsx scripts/check-docs-freshness.ts",
     "workflow": "chmod +x scripts/git-workflow.sh && ./scripts/git-workflow.sh"
   },
   "dependencies": {
