--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ingest": "tsx scripts/ingest-docs.ts",
     "rag-worker": "tsx scripts/rag-worker.ts",
     "check-docs": "tsx scripts/check-docs-freshness.ts",
+    "test-responses": "tsx scripts/test-common-responses.ts",
     "workflow": "chmod +x scripts/git-workflow.sh && ./scripts/git-workflow.sh"
   },
   "dependencies": {
